css/style.css
/* Global */

* {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
}

body {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 3rem;
}

a {
   text-decoration: none;
   color: black;
}

a:hover {
   color: #0065fc;
}

/* Component */

.booki-logo {
   max-width: 4rem;
   max-height: 1.25rem;
}

.section-title {
   font-size: 1.375rem;
   font-weight: 700;
   padding: 0.5rem 0;
}

.sub-title {
   font-size: 1.125rem;
   font-weight: 700;
   padding: 0.5rem 0;
}

.info {
   font-size: 1rem;
   font-weight: 400;
   line-height: 2rem;
}

.card-title {
   font-size: 1rem;
   font-weight: 700;
}

.card-info {
   font-size: 0.875rem;
   font-weight: 400;
}

.card-star i {
   font-size: 0.875rem;
   color: #0065fc;

}

.card-star i:nth-child(5) {
   color: #f2f2f2;

}

/* Header */

header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 6rem;
}

.header-nav {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 6rem;
   width: 16rem;
}

.header-nav a {
   padding: 2.25rem 1rem;
   border-top: 0.25rem solid transparent;
}

.header-nav a:hover {  
   font-weight: 400;
   border-top: 0.25rem solid #0065fc;
}

/* Main */

main {
   margin: 2.5rem 0;
}

.main-center {
   display: flex;
   flex-direction: row;
   margin: 2.5rem 0;
   column-gap: 2rem;
}

   /* Search Form */

.search-field {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   margin: 1rem 0;
   height: 2rem;
}

.search-field button {
   padding: 0 0.5rem;
   border: 1px solid #0065fc;
   border-left: none;
   border-radius: 0 0.5rem 0.5rem 0;
   color: white;
   background-color: #0065fc;
   font-weight: 700;
   font-size: 1.125rem;
}

.search-field input {
   padding: 0 0.5rem;
   border: 1px solid #f2f2f2;
   border-right: none;
   background-color: white;
   font-weight: 700;
   font-size: 1.125rem;
}

.search-field i.fa-location-dot {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f2f2f2;
   border-radius: 0.5rem 0 0 0.5rem;
   min-width: 2rem;
}

   /* Filter */

.filter-field {
   display: flex;
   flex-direction: row;
   margin: 2rem 0 1rem 0;
   column-gap: 2rem;;
}

.filter{
   font-size: 1.1rem;
   font-weight: 700;
   background-color: white;
   padding: 0.5rem 1rem;
   border: 0.125rem solid #f2f2f2;
   border-radius: 1.125rem;
}

.filter:hover {
   background-color: #deebff;
}

.filter i {
   color: #0065fc;
}

.info i {
   font-size: 0.75rem;
   color: #0065fc;
   border: 0.125rem solid #f2f2f2;
   border-radius: 50%;
   height: 1.25rem;
   width: 1.25rem;
   text-align: center;
   line-height: 1.25rem;
}

   /* Lodge */

#lodge {
   background-color: #f2f2f2;
   flex-basis: 55rem;
   padding: 1.5rem;
   border-radius: 1rem;
}

.lodge-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   column-gap: 1rem;
   row-gap: 1rem;
   margin: 1rem 0;
}

.lodge-card {
   background-color: white;
   padding: 0.25rem 0.25rem 0.5rem 0.25rem;
   margin: 0.5rem;
   border-radius: 1rem;
   box-shadow: 0.25rem 0.25rem 0.25rem lightgrey
}

.lodge-image {
   height: 8rem;
   width: 100%;
   object-fit: fill;
   border-radius: 1rem 1rem 0 0;
}

.lodge-text {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   line-height: 1.5rem;
}

   /* Trend */

.trend {
   background-color: #f2f2f2;
   flex-basis: 22rem;
   padding: 1.5rem 2rem 1.5rem 2rem;
   border-radius: 1rem;
}

.trend-cards {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   row-gap: 2rem;
   margin: 1.5rem 0;
}

.trend-card {
   display: flex;
   flex-direction: row;
   background-color: white;
   padding: 0.25rem;
   border-radius: 1rem;
   box-shadow: 0.25rem 0.25rem 0.25rem lightgrey;
}

.trend-card a {
   display: flex;
   flex-direction: row;
}

.trend-image {
   width: 25%;
   object-fit: fill;
   border-radius: 1rem 0 0 1rem;
}

.trend-text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 0.25rem 1rem;
}

.trend-text-top {
   line-height: 1.125rem;
}

.trend .section-title {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
}

.trend .section-title i {
   font-size: 1.125rem;
   color: #0065fc;
   line-height: 1.5rem;
}

   /* Activity */

#activity {
   display: flex;
   flex-direction: column;
}

.activity-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 2rem;
   margin-top: 1rem;
}

.activity-card {
   border-radius: 1rem;
   box-shadow: 0.25rem 0.25rem 0.25rem lightgrey;
   padding-bottom: 1rem;
}

.activity-image {
   height: 24rem;
   width: 100%;
   object-fit: fill;
   border-radius: 1rem 1rem 0 0;
   margin-bottom: 0.5rem;
}

.activity-text {
   display: flex;
   flex-direction: column;
   padding: 0.25rem 1rem;
}

/* Footer */

footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background-color: #f2f2f2;
   padding: 2.5rem;
   padding-right: 32rem;

}

.footer-nav {
   display: flex;
   flex-direction: column;
   margin: 1rem;
}

.footer-list {
   list-style: none;
   line-height: 2rem;
   margin-top: 0.75rem;
}

/* Media Queries */

   /* Tablet  */

@media screen and (min-width: 768px) {

   .mobile-button {
      display: none;
   }
}

@media screen and (min-width: 768px) and (max-width: 991px) {

   .main-center {
      flex-direction: column;
      row-gap: 2rem;
   }

   #lodge {
      max-height: 40rem;
   }

   .trend {
      max-height: 16rem;
      margin: 2rem 0;
   }

   .trend-cards {
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: 1fr;
      column-gap: 2rem;
   }

   .trend-card {
      min-height: 8rem;
   }

   .trend-image {
      width: 33%;
   }

   .activity-image {
      height: 12rem;
   }

   footer {
      padding-right: 10rem;
   }
}

   /* Mobile */

@media screen and (max-width: 767px) {

   .desktop-button {
      display: none;
   }

   body {
      padding: 0;
   }

   header {
      flex-direction: column;
      padding-top: 1rem;
   }

   .header-nav {
      width: 100%;
   }

   .header-nav a {
      padding: 4rem 1rem 2rem 1rem;
      width: 100%;
      text-align: center;
      border-top: none;
      border-bottom: 0.25rem solid transparent;
   }

   .header-nav a:hover {  
      font-weight: 400;
      border-top: none;
      border-bottom: 0.25rem solid #0065fc;
   }

   .search-filter {
      padding: 2rem;
   }

   .search-field {
      justify-content: center;
      height: 3rem;
      margin: 1rem 0;
   }

   .filter-field {
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr 1fr;
      row-gap: 1rem;
      margin-top: 0;
      margin-bottom: 3rem;
   }

   .filter-field .sub-title {
      grid-column-start: 1;
      grid-column-end: 3;
   }

   .main-center {
      flex-direction: column-reverse;
   }

   .card-title {
      line-height: 2.5rem;
      font-size: 1.25rem;
   }

   .card-info {
      line-height: 2.5rem;
      font-size: 1rem;
   }

   .trend {
      border-radius: 0;
   }

   .trend-card {
      max-height: 12rem;
   }

   .trend-image {
      width: 35%;
      object-fit: cover;
   }

   #lodge {
      border-radius: 0;
      background-color: white;
   }

   .lodge-cards {
      display: flex;
      flex-direction: column;
   }

   .lodge-card {
      max-height: 20rem;
   }

   .lodge-cards .sub-title {
      display: none;
   }

   .lodge-image {
      object-fit: cover;
   }

   #activity {
      padding: 1.5rem;
      margin-bottom: 3rem;
   }
   .activity-cards {
      display: flex;
      flex-direction: column;
      row-gap: 2rem;
   }

   .activity-card {
      max-height: 24rem;
   }

   .activity-image {
      height: 12rem;
      object-fit: cover;
   }

   footer {
      flex-direction: column;
      padding: 2rem;
   }
}

